# ALADIN-Services

./: .editorconfig  .gitignore  LICENSE  Makefile  README.md  package-lock.json  package.json
.github/workflows/: service-graph-rewriting-service.yml  service-jsonpath-mapper-service.yml  service-sql-assessment-service.yml
services/fermentaladin-service/: .dockerignore  .gitignore  Dockerfile  Howto_GIT.md  README.md  ausgabe.json  calc_fermentation.sh  pyproject.toml
services/fermentaladin-service/.github/workflows/: images.yml
services/fermentaladin-service/archiv/: Fx_ODE_Bioreaktor.py  models.json
services/fermentaladin-service/src/: main.py
services/fermentaladin-service/src/DataModels/: input_definition.py  model_db.json  model_definition.py  result_definition.py
services/fermentaladin-service/src/InputAdapter/: base_input_adapter.py  excel_adapter.py  file_input_adapter.py  input_adapter_strategy.py  std_in_adapter.py
services/fermentaladin-service/src/OutputAdapter/: base_output_adapter.py  chart_js_adapter.py  df_adapter.py  output_adapter_strategy.py
services/fermentaladin-service/src/Util/: arg_parser.py  base_io_adapter.py  multiplot_ferm.py  strategy_pattern.py  sync_excel_models_to_json_file.py
services/fermentaladin-service/src/calc/: Fx_ODE_Bioreaktor.py  Nebenrechnungen.py  calc_bioreactor.py
services/fermentaladin-service/test/: Bioreactor_forPy.xlsx  test_file_input_adapter.py
services/fermentaladin-service/test/test_data/: user_input.json
services/graph-rewriting-service/: .env.example  Dockerfile  Makefile  README.md  (+6 more)
(+131 files in other folders)
