[project]
name = "fermentationmodel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "contourpy==1.3.3",
    "et-xmlfile==2.0.0",
    "fonttools==4.61.1",
    "iniconfig==2.3.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "scipy>=1.16.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
